import streamlit as st
import time
from check_info import CheckInfo
from tempfile import TemporaryDirectory

_VERSION = "Beta 1.4.7"

# Placeholder for CheckInfo class
class CheckInfo:
    def __init__(self):
        # Initialize any necessary variables
        self.flow_table_set = set()

    def run(self, flow_table_set):
        st.write("Running checks... (this is a mock implementation)")

    def import_flow(self, path, device_type, log_area):
        # Mock implementation
        st.write(f"Importing flow for path: {path} and device type: {device_type}")
        # Update the log area - this is just a placeholder
        log_area.text(f"Flow imported for device {device_type} from {path}")

    def get_flow_selected(self):
        # Mock implementation
        return self.flow_table_set

check_info = CheckInfo()

def put_data_log(data_log):
    """ Appends log messages in the app """
    st.write(data_log)

# Define a function to update the progress bar (this is a placeholder)
def update_progress_bar(progress_bar):
    for i in range(100):
        # Pretend we're doing some work by sleeping
        time.sleep(0.1)
        progress_bar.progress(i+1)

# Main Streamlit App
def main():
    st.title(f"Check Info Tool {_VERSION}")

    # Sidebar for menu options
    with st.sidebar:
        st.header("File")
        if st.button("Import Program File(.igxl)"):
            # Replace with actual file import logic
            put_data_log("Import Program File logic goes here.")

        if st.button("Import Program Directory"):
            # Replace with actual directory import logic
            put_data_log("Import Program Directory logic goes here.")

        if st.button("Import Pattern Directory(optional)"):
            # Replace with actual directory import logic
            put_data_log("Import Pattern Directory logic goes here.")

        if st.button("Set Power Order(optional)"):
            # Replace with actual power order logic
            put_data_log("Set Power Order logic goes here.")

        st.header("Help")
        if st.button("About"):
            st.info("Thank you for using!\nCreated by [Your Name], maintained by [Maintainer Name].\nAny suggestions please mail [your-email@example.com]")
        if st.button("User Guide"):
            st.info("Please wait...")

        # # Button to clear cache (reset the app state)
        # if st.button('Clear Cache'):
        #     caching.clear_cache()
        #     st.success('Cache cleared!')


    # Main UI Components
    test_program = st.text_input("Test Program:")

    key_var = st.selectbox("Select Device:", ['UltraFLEX Plus', 'UltraFLEX', 'J750'])

    cycle_format_var = st.radio("Cycle Mode:", ('Period', 'Frequency'))

    if st.button('Load'):
        check_info.import_flow(test_program, key_var, st)

    with st.expander("Logs"):
        log_text_area = st.text_area("", key="logs", height=300)

    # Mock progress bar
    progress_bar = st.progress(0)

    if st.button('Run'):
        check_info.run(check_info.get_flow_selected())
        # Update the progress bar - this logic will need to be according to actual run method
        update_progress_bar(progress_bar)

        # Add a completion message to the logs.
        log_text_area.text += "Run completed\n"

# Run the main function
if __name__ == "__main__":
    main()